	Threading - this means screan won't turn black anymore (hang)
	Download Template won't be killed after click anymore
	Auto download template on Omega startup

	[Clock & (Clock)Colors]
	Left clock fixed
	Clock will now be written by PIL instead of edited with a color tint!
	Individually theming clock
	Clock size now LIVE editable by the styles @ Customize tab
	Colors will be put in XMLs now

	[Support]
	Fixed downloading styles
	Much more icon sets & styles, uploaded by Mike (Team Syndicate)
	Fixed invalid colorize notification icons
	GTK resizing! No more tools need to be installed to resize.
	GTK converting P -> RGB(A) - this means indexed images won't turn blurry anymore
	Compile updated (bugs fixed)
	PIL link replaced with custom compiled one with TrueType support
	Updated Rename for better future support

	[Style, Usability & Polish]
	Upload custom theme APK and import styles from there - PORT CM THEMES WITH THIS!
	Landscape (+) bar in Colorize Tab
	Locations are now on the right @ Customize tab

==v0.83.2==
	[INTERNAL]
	TOTAL review of all code
	converted some more functions to classes
	New file choosers (internal)
	Merged Linux&Mac -> StudioUnix

	[OMEGA]
	Expanded view @Customize tab
	Icon location customization live visible in preview (:D)
	Preview & Undo-Preview @Colorize-tab (Temporarily preview the selected icons without affecting them)

	[Style, Usability & Polish]
	Converted "Build from Source" to 3-column UI
	On first startup, the MissingTools will be opened instead of Install Image Tools.
	MissingTools includes: Java, ImageMagick, PIL, PyWin32 (Windows only ofcourse)

	[Support]
	Fix switching sources to stock
	Fix custom Working folder
	Fix screen turn black when syncing and/or building
	
	[LANGUAGE]
	Added Spanish translation (partial)
	Upcoming Italian translation ;D

Feature requests are always welcome :)
Also, if you want to contribute, don't hestitate to contact me!
Azblankin, KeitlG are already contributing to this project!

0.83.16